--- a/01-Basic/02-OpenAI-LLM.ipynb
+++ b/01-Basic/02-OpenAI-LLM.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3bf28f9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -16,10 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "93ac45ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "LANGCHAIN_PROJECT\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# .env 파일에 LANGCHAIN_API_KEY를 입력합니다.\n",
@@ -27,7 +48,7 @@
     "from langchain_teddynote import logging\n",
     "\n",
     "# 프로젝트 이름을 입력합니다.\n",
-    "logging.langsmith(\"CH01-Basic\")"
+    "logging.langsmith(\"LANGCHAIN_PROJECT\")"
    ]
   },
   {
@@ -51,28 +72,36 @@
     "\n",
     "`model_name`: 적용 가능한 모델 리스트\n",
     "\n",
-    "| 모델 계열       | 모델명 (API Name) | 입력       | 컨텍스트 윈도우  | 최대 출력 토큰 | 지식 마감일 (Cutoff) | 가격                  |\n",
-    "| :---------- | :------------- | :------- | :-------- | :------- | :-------------- | :------------------------------ |\n",
-    "| **GPT-5**   | `gpt-5`        | 텍스트, 이미지 | 400,000   | 128,000  | 2024년 9월 30일    | **입력:** $1.25<br>**출력:** $10.00 |\n",
-    "|             | `gpt-5-mini`   | 텍스트, 이미지 | 400,000   | 128,000  | 2024년 5월 31일    | **입력:** $0.25<br>**출력:** $2.00  |\n",
-    "|             | `gpt-5-nano`   | 텍스트, 이미지 | 400,000   | 128,000  | 2024년 5월 31일    | **입력:** $0.05<br>**출력:** $0.40  |\n",
-    "| **GPT-4.1** | `gpt-4.1`      | 텍스트, 이미지 | 1,047,576 | 32,768   | 2024년 6월 1일     | **입력:** $2.00<br>**출력:** $8.00  |\n",
-    "|             | `gpt-4.1-mini` | 텍스트, 이미지 | 1,047,576 | 32,768   | 2024년 6월 1일     | **입력:** $0.40<br>**출력:** $1.60  |\n",
-    "|             | `gpt-4.1-nano` | 텍스트, 이미지 | 1,047,576 | 32,768   | 2024년 6월 1일     | **입력:** $0.10<br>**출력:** $0.40  |\n",
-    "| **GPT-4o**  | `gpt-4o`       | 텍스트, 이미지 | 128,000   | 16,384   | 2023년 10월 1일    | **입력:** $2.50<br>**출력:** $10.00 |\n",
-    "|             | `gpt-4o-mini`  | 텍스트, 이미지 | 128,000   | 16,384   | 2023년 10월 1일    | **입력:** $0.15<br>**출력:** $0.60  |\n",
+    "| 모델 계열   | 모델명 (API Name) | 입력           | 컨텍스트 윈도우 | 최대 출력 토큰 | 지식 마감일 (Cutoff) | 가격                                |\n",
+    "| :---------- | :---------------- | :------------- | :-------------- | :------------- | :------------------- | :---------------------------------- |\n",
+    "| **GPT-5**   | `gpt-5`           | 텍스트, 이미지 | 400,000         | 128,000        | 2024년 9월 30일      | **입력:** $1.25<br>**출력:** $10.00 |\n",
+    "|             | `gpt-5-mini`      | 텍스트, 이미지 | 400,000         | 128,000        | 2024년 5월 31일      | **입력:** $0.25<br>**출력:** $2.00  |\n",
+    "|             | `gpt-5-nano`      | 텍스트, 이미지 | 400,000         | 128,000        | 2024년 5월 31일      | **입력:** $0.05<br>**출력:** $0.40  |\n",
+    "| **GPT-4.1** | `gpt-4.1`         | 텍스트, 이미지 | 1,047,576       | 32,768         | 2024년 6월 1일       | **입력:** $2.00<br>**출력:** $8.00  |\n",
+    "|             | `gpt-4.1-mini`    | 텍스트, 이미지 | 1,047,576       | 32,768         | 2024년 6월 1일       | **입력:** $0.40<br>**출력:** $1.60  |\n",
+    "|             | `gpt-4.1-nano`    | 텍스트, 이미지 | 1,047,576       | 32,768         | 2024년 6월 1일       | **입력:** $0.10<br>**출력:** $0.40  |\n",
+    "| **GPT-4o**  | `gpt-4o`          | 텍스트, 이미지 | 128,000         | 16,384         | 2023년 10월 1일      | **입력:** $2.50<br>**출력:** $10.00 |\n",
+    "|             | `gpt-4o-mini`     | 텍스트, 이미지 | 128,000         | 16,384         | 2023년 10월 1일      | **입력:** $0.15<br>**출력:** $0.60  |\n",
     "\n",
     "![gpt-models.png](./images/gpt-models3-202508.png)\n",
     "\n",
-    "- 링크: https://platform.openai.com/docs/models"
+    "- 링크: https://platform.openai.com/docs/models\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5fc161c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[답변]: content='대한민국의 수도는 서울입니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 16, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_c4c155951e', 'id': 'chatcmpl-C6h7RgeetHLULdOfbap7UIrSolaAj', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='run--9613ddc1-97fd-484e-bfe9-49cceb194273-0' usage_metadata={'input_tokens': 16, 'output_tokens': 8, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
@@ -94,12 +123,12 @@
    "id": "d2ef2647",
    "metadata": {},
    "source": [
-    "### 답변의 형식(AI Message)"
+    "### 답변의 형식(AI Message)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2af58a9a",
    "metadata": {},
    "outputs": [],
@@ -113,30 +142,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "24ecdeb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='대한민국의 수도는 서울입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 16, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_c4c155951e', 'id': 'chatcmpl-C6h7YROmFnskbxRM59Fx1PgY4zobc', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--cb463469-66b4-4e3a-9a09-843fb2f6e826-0', usage_metadata={'input_tokens': 16, 'output_tokens': 8, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ffd49c11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'대한민국의 수도는 서울입니다.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4df69214",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'token_usage': {'completion_tokens': 8,\n",
+       "  'prompt_tokens': 16,\n",
+       "  'total_tokens': 24,\n",
+       "  'completion_tokens_details': {'accepted_prediction_tokens': 0,\n",
+       "   'audio_tokens': 0,\n",
+       "   'reasoning_tokens': 0,\n",
+       "   'rejected_prediction_tokens': 0},\n",
+       "  'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}},\n",
+       " 'model_name': 'gpt-4.1-nano-2025-04-14',\n",
+       " 'system_fingerprint': 'fp_c4c155951e',\n",
+       " 'id': 'chatcmpl-C6h7YROmFnskbxRM59Fx1PgY4zobc',\n",
+       " 'service_tier': 'default',\n",
+       " 'finish_reason': 'stop',\n",
+       " 'logprobs': None}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response.response_metadata"
    ]
@@ -148,7 +223,7 @@
    "source": [
     "### LogProb 활성화\n",
     "\n",
-    "주어진 텍스트에 대한 모델의 **토큰 확률의 로그 값** 을 의미합니다. 토큰이란 문장을 구성하는 개별 단어나 문자 등의 요소를 의미하고, 확률은 **모델이 그 토큰을 예측할 확률**을 나타냅니다."
+    "주어진 텍스트에 대한 모델의 **토큰 확률의 로그 값** 을 의미합니다. 토큰이란 문장을 구성하는 개별 단어나 문자 등의 요소를 의미하고, 확률은 **모델이 그 토큰을 예측할 확률**을 나타냅니다.\n"
    ]
   },
   {
@@ -198,7 +273,7 @@
    "source": [
     "### 스트리밍 출력\n",
     "\n",
-    "스트리밍 옵션은 질의에 대한 답변을 실시간으로 받을 때 유용합니다."
+    "스트리밍 옵션은 질의에 대한 답변을 실시간으로 받을 때 유용합니다.\n"
    ]
   },
   {
@@ -247,7 +322,7 @@
    "source": [
     "## 프롬프트 캐싱\n",
     "\n",
-    "- 참고 링크: https://platform.openai.com/docs/guides/prompt-caching"
+    "- 참고 링크: https://platform.openai.com/docs/guides/prompt-caching\n"
    ]
   },
   {
@@ -259,7 +334,7 @@
     "\n",
     "다만, 캐싱에 활용할 토큰은 고정된 PREFIX 를 주는 것이 권장됩니다.\n",
     "\n",
-    "아래의 예시에서는 `<PROMPT_CACHING>` 부분에 고정된 토큰을 주어 캐싱을 활용하는 방법을 설명합니다."
+    "아래의 예시에서는 `<PROMPT_CACHING>` 부분에 고정된 토큰을 주어 캐싱을 활용하는 방법을 설명합니다.\n"
    ]
   },
   {
@@ -408,7 +483,7 @@
     "- 오디오: 음성, 음악, 소리 효과 등의 청각적 정보\n",
     "- 비디오: 동영상 클립, 실시간 스트리밍 등 시각적 및 청각적 정보의 결합\n",
     "\n",
-    "`gpt-4.1` 모델은 이미지 인식 기능(Vision) 이 추가되어 있는 모델입니다."
+    "`gpt-4.1` 모델은 이미지 인식 기능(Vision) 이 추가되어 있는 모델입니다.\n"
    ]
   },
   {
@@ -468,7 +543,7 @@
    "id": "a7b5fc02",
    "metadata": {},
    "source": [
-    "## System, User 프롬프트 수정"
+    "## System, User 프롬프트 수정\n"
    ]
   },
   {
@@ -509,7 +584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langchain-kr-CdOel15G-py3.11",
+   "display_name": "langchain-kr-FoBlHM95-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
