--- a/01-Basic/02-OpenAI-LLM.ipynb
+++ b/01-Basic/02-OpenAI-LLM.ipynb
@@ -37,7 +37,7 @@
      "text": [
       "LangSmith 추적을 시작합니다.\n",
       "[프로젝트명]\n",
-      "LANGCHAIN_PROJECT\n"
+      "CH01-Basic\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
     "from langchain_teddynote import logging\n",
     "\n",
     "# 프로젝트 이름을 입력합니다.\n",
-    "logging.langsmith(\"LANGCHAIN_PROJECT\")"
+    "logging.langsmith(\"CH01-Basic\")"
    ]
   },
   {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "5fc161c2",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[답변]: content='대한민국의 수도는 서울입니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 16, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_c4c155951e', 'id': 'chatcmpl-C6h7RgeetHLULdOfbap7UIrSolaAj', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='run--9613ddc1-97fd-484e-bfe9-49cceb194273-0' usage_metadata={'input_tokens': 16, 'output_tokens': 8, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+      "[답변]: content='대한민국의 수도는 서울특별시입니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 11, 'prompt_tokens': 16, 'total_tokens': 27, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-mini-2025-04-14', 'system_fingerprint': 'fp_37c45ea698', 'id': 'chatcmpl-C77bbybNWQAruR3COpzRIJYXkxxxO', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='run--86a6e226-7aa2-4c6b-80cf-e069b1a4b339-0' usage_metadata={'input_tokens': 16, 'output_tokens': 11, 'total_tokens': 27, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
      ]
     }
    ],
@@ -108,7 +108,8 @@
     "# 객체 생성\n",
     "llm = ChatOpenAI(\n",
     "    temperature=0.1,  # 창의성 (0.0 ~ 2.0)\n",
-    "    model_name=\"gpt-4.1-nano\",  # 모델명\n",
+    "    model_name=\"gpt-4.1-mini\",  # 모델명\n",
+    "    max_tokens=1000, # 최대 토큰 수\n",
     ")\n",
     "\n",
     "# 질의내용\n",
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "2af58a9a",
    "metadata": {},
    "outputs": [],
@@ -142,17 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "24ecdeb9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='대한민국의 수도는 서울입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 16, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-nano-2025-04-14', 'system_fingerprint': 'fp_c4c155951e', 'id': 'chatcmpl-C6h7YROmFnskbxRM59Fx1PgY4zobc', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--cb463469-66b4-4e3a-9a09-843fb2f6e826-0', usage_metadata={'input_tokens': 16, 'output_tokens': 8, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='대한민국의 수도는 서울특별시입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 11, 'prompt_tokens': 16, 'total_tokens': 27, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4.1-mini-2025-04-14', 'system_fingerprint': 'fp_37c45ea698', 'id': 'chatcmpl-C77c5Ng2xDjZP6vPjrp0pvMEF3rLf', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--07053537-c26b-44a0-bd7c-88f1aaa4ab57-0', usage_metadata={'input_tokens': 16, 'output_tokens': 11, 'total_tokens': 27, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,17 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "ffd49c11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'대한민국의 수도는 서울입니다.'"
+       "'대한민국의 수도는 서울특별시입니다.'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,30 +185,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "4df69214",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'token_usage': {'completion_tokens': 8,\n",
+       "{'token_usage': {'completion_tokens': 11,\n",
        "  'prompt_tokens': 16,\n",
-       "  'total_tokens': 24,\n",
+       "  'total_tokens': 27,\n",
        "  'completion_tokens_details': {'accepted_prediction_tokens': 0,\n",
        "   'audio_tokens': 0,\n",
        "   'reasoning_tokens': 0,\n",
        "   'rejected_prediction_tokens': 0},\n",
        "  'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}},\n",
-       " 'model_name': 'gpt-4.1-nano-2025-04-14',\n",
-       " 'system_fingerprint': 'fp_c4c155951e',\n",
-       " 'id': 'chatcmpl-C6h7YROmFnskbxRM59Fx1PgY4zobc',\n",
+       " 'model_name': 'gpt-4.1-mini-2025-04-14',\n",
+       " 'system_fingerprint': 'fp_37c45ea698',\n",
+       " 'id': 'chatcmpl-C77c5Ng2xDjZP6vPjrp0pvMEF3rLf',\n",
        " 'service_tier': 'default',\n",
        " 'finish_reason': 'stop',\n",
        " 'logprobs': None}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fe733438",
    "metadata": {},
    "outputs": [],
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8ae2d627",
    "metadata": {},
    "outputs": [],
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1bbc5d03",
    "metadata": {},
    "outputs": [],
@@ -290,14 +291,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "87a90e66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "대한민국의 아름다운 관광지 10곳과 주소를 아래에 소개해 드립니다.\n",
+      "\n",
+      "1. **경복궁**  \n",
+      "   주소: 서울특별시 종로구 사직로 161\n",
+      "\n",
+      "2. **제주도 성산일출봉**  \n",
+      "   주소: 제주특별자치도 서귀포시 성산읍 성산리\n",
+      "\n",
+      "3. **부산 해운대 해수욕장**  \n",
+      "   주소: 부산광역시 해운대구 우동\n",
+      "\n",
+      "4. **경주 불국사**  \n",
+      "   주소: 경상북도 경주시 불국로 385\n",
+      "\n",
+      "5. **서울 남산타워 (N서울타워)**  \n",
+      "   주소: 서울특별시 용산구 남산공원길 105\n",
+      "\n",
+      "6. **전주 한옥마을**  \n",
+      "   주소: 전라북도 전주시 완산구 기린대로 99\n",
+      "\n",
+      "7. **강릉 경포대**  \n",
+      "   주소: 강원도 강릉시 경포로 365\n",
+      "\n",
+      "8. **속초 설악산 국립공원**  \n",
+      "   주소: 강원도 속초시 설악산로 108\n",
+      "\n",
+      "9. **안동 하회마을**  \n",
+      "   주소: 경상북도 안동시 풍천면 하회리\n",
+      "\n",
+      "10. **남해 독일마을**  \n",
+      "    주소: 경상남도 남해군 삼동면 독일마을길 17\n",
+      "\n",
+      "필요하시면 각 관광지의 상세 정보나 방문 팁도 알려드릴 수 있습니다!"
+     ]
+    }
+   ],
    "source": [
     "# 스트리밍 방식으로 각 토큰을 출력합니다. (실시간 출력)\n",
     "for token in answer:\n",
     "    print(token.content, end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c96f873",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 스트리밍 방식으로 각 토큰을 출력하고 최종 답변을 저장함.\n",
+    "final_answer = \"\"\n",
+    "for token in answer:\n",
+    "    final_answer += token.content\n",
+    "    print(token.content, end=\"\", flush=True)\n",
+    "\n",
+    "print(f\"\\n[최종 답변]: {final_answer}\")"
    ]
   },
   {
@@ -488,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a859058d",
    "metadata": {},
    "outputs": [],
@@ -548,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4be092af",
    "metadata": {},
    "outputs": [],
