--- a/01-Basic/01-OpenAI-APIKey.ipynb
+++ b/01-Basic/01-OpenAI-APIKey.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "설치된 LangChain 버전을 확인합니다."
+    "설치된 LangChain 버전을 확인합니다.\n"
    ]
   },
   {
@@ -104,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py-test",
+   "display_name": "langchain-kr-FoBlHM95-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
