--- a/01-Basic/03-LCEL.Ipynb
+++ b/01-Basic/03-LCEL.Ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -24,9 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH01-Basic\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install -qU langchain-teddynote\n",
@@ -51,12 +72,12 @@
     "\n",
     "`input_variables`\n",
     "\n",
-    "- input_variables는 PromptTemplate에서 사용되는 변수의 이름을 정의하는 리스트입니다."
+    "- input_variables는 PromptTemplate에서 사용되는 변수의 이름을 정의하는 리스트입니다.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PromptTemplate(input_variables=['country'], input_types={}, partial_variables={}, template='{country}의 수도는 어디인가요?')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# template 정의\n",
     "template = \"{country}의 수도는 어디인가요?\"\n",
@@ -87,9 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'대한민국의 수도는 어디인가요?'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# prompt 생성\n",
     "prompt = prompt_template.format(country=\"대한민국\")\n",
@@ -98,9 +141,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'미국의 수도는 어디인가요?'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# prompt 생성\n",
     "prompt = prompt_template.format(country=\"미국\")\n",
@@ -163,7 +217,7 @@
     "### invoke() 호출\n",
     "\n",
     "- python 딕셔너리 형태로 입력값을 전달합니다.(키: 값)\n",
-    "- invoke() 함수 호출 시, 입력값을 전달합니다."
+    "- invoke() 함수 호출 시, 입력값을 전달합니다.\n"
    ]
   },
   {
@@ -191,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "아래는 스트리밍을 출력하는 예시 입니다."
+    "아래는 스트리밍을 출력하는 예시 입니다.\n"
    ]
   },
   {
@@ -228,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chain 에 출력파서를 추가합니다."
+    "Chain 에 출력파서를 추가합니다.\n"
    ]
   },
   {
@@ -271,7 +325,7 @@
     "### 템플릿을 변경하여 적용\n",
     "\n",
     "- 아래의 프롬프트 내용을 얼마든지 **변경** 하여 테스트 해볼 수 있습니다.\n",
-    "- `model_name` 역시 변경하여 테스트가 가능합니다."
+    "- `model_name` 역시 변경하여 테스트가 가능합니다.\n"
    ]
   },
   {
@@ -351,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langchain-kr-CdOel15G-py3.11",
+   "display_name": "langchain-kr-FoBlHM95-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -365,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
