--- a/01-Basic/03-LCEL.Ipynb
+++ b/01-Basic/03-LCEL.Ipynb
@@ -163,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
     "model = ChatOpenAI(\n",
-    "    model=\"gpt-4.1-nano\",\n",
+    "    model=\"gpt-4o-mini\",\n",
     "    temperature=0.1,\n",
     ")"
    ]
@@ -198,12 +198,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# prompt 를 PromptTemplate 객체로 생성합니다.\n",
-    "prompt = PromptTemplate.from_template(\"{topic} 에 대해 쉽게 설명해주세요.\")\n",
+    "prompt = PromptTemplate.from_template(\"{topic} 에 대해 {how} 설명해주세요.\")\n",
     "\n",
     "model = ChatOpenAI(model=\"gpt-4.1-nano\", temperature=0.1)\n",
     "\n",
@@ -222,23 +222,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# input 딕셔너리에 주제를 '인공지능 모델의 학습 원리'으로 설정합니다.\n",
-    "input = {\"topic\": \"인공지능 모델의 학습 원리\"}"
+    "input = {\"topic\": \"인공지능 모델의 학습 원리\", \"how\": \"초등학생도 이해할 수 있게\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# prompt 객체와 model 객체를 파이프(|) 연산자로 연결하고 invoke 메서드를 사용하여 input을 전달합니다.\n",
     "# 이를 통해 AI 모델이 생성한 메시지를 반환합니다.\n",
-    "chain.invoke(input)"
+    "answer = chain.invoke(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"물론입니다! 인공지능 모델의 학습 원리를 쉽게 설명해 드릴게요.\\n\\n1. **데이터 수집**: 먼저, 인공지능이 배울 수 있도록 많은 예제(데이터)를 모아요. 예를 들어, 고양이 사진을 많이 보여주는 거죠.\\n\\n2. **모델 설계**: 그런 데이터를 이해하고 학습할 수 있도록 인공지능의 '뇌' 역할을 하는 모델을 만듭니다. 이 모델은 여러 층으로 이루어진 신경망일 수 있어요.\\n\\n3. **학습 과정**:\\n   - 모델은 처음에는 아무것도 모르기 때문에, 입력(예: 사진)을 넣으면 결과가 틀릴 수 있어요.\\n   - 정답(예: '이 사진은 고양이입니다')와 비교해서 얼마나 틀렸는지 계산해요. 이걸 '손실' 또는 '오차'라고 해요.\\n   - 그 다음, 이 오차를 줄이기 위해 모델의 내부 값(가중치)을 조금씩 조정해요. 이 과정을 여러 번 반복하면서 모델이 점점 더 정확하게 사진을 구별하게 되는 거죠.\\n\\n4. **반복과 개선**: 수많은 데이터를 보고, 계속해서 오차를 줄이기 위해 조정하는 과정을 반복하면, 모델은 점점 더 좋은 성능을 내게 돼요.\\n\\n요약하자면, 인공지능 모델은 많은 데이터를 보고, 오차를 계산하며, 그 오차를 줄이기 위해 내부 값을 계속 수정하는 과정을 반복하면서 학습하는 거예요. 이렇게 해서 점점 더 똑똑해지는 것이죠!\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer.content\n",
+    "# answer.response_metadata"
    ]
   },
   {
@@ -269,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,12 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"물론입니다! 인공지능 모델의 학습 원리를 쉽게 설명해 드릴게요.\\n\\n1. **데이터 수집**: 먼저, 인공지능이 배우기 위해 많은 예제(데이터)를 모아요. 예를 들어, 고양이 사진을 많이 보여주는 거죠.\\n\\n2. **모델 설계**: 그런 다음, 이 데이터를 이해하고 학습할 수 있는 '모델'이라는 수학적 구조를 만듭니다. 이 모델은 사람의 뇌처럼 작동하는 인공신경망일 수 있어요.\\n\\n3. **학습 과정**:\\n   - 모델은 처음에는 아무것도 모르기 때문에, 예제 데이터를 보고 예측을 해요.\\n   - 예를 들어, 사진이 고양이인지 아닌지 맞추려고 시도하죠.\\n   - 그리고 모델이 만든 예측이 실제 정답(고양이 사진인지 아닌지)와 얼마나 다른지 계산해요. 이 차이를 '오차'라고 해요.\\n   \\n4. **오차 줄이기**:\\n   - 오차를 줄이기 위해, 모델은 자신의 내부 값(가중치와 편향)을 조금씩 조정해요.\\n   - 이 과정을 반복하면서, 모델은 점점 더 정확하게 예측할 수 있게 돼요.\\n\\n5. **반복 학습**:\\n   - 이 과정을 여러 번 반복하면서, 모델은 점점 더 많은 데이터를 이해하고, 새로운 데이터에 대해서도 잘 맞출 수 있게 돼요.\\n\\n**요약하자면**: 인공지능 모델은 많은 데이터를 보고, 예측을 하고, 그 예측이 틀리면 수정하는 과정을 반복하면서 점점 더 똑똑해지는 거예요. 이 과정을 '학습'이라고 부릅니다.\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain 객체의 invoke 메서드를 사용하여 input을 전달합니다.\n",
-    "input = {\"topic\": \"인공지능 모델의 학습 원리\"}\n",
+    "input = {\"topic\": \"인공지능 모델의 학습 원리\", \"how\": \"초등학생도 이해할 수 있게\"}\n",
     "chain.invoke(input)"
    ]
   },
@@ -330,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,9 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 영어 회화:  \n",
+      "\"Hello! I’d like to order, please. Could I see the menu?\"  \n",
+      "  \n",
+      "- 한글 해석:  \n",
+      "\"안녕하세요! 주문하고 싶은데요. 메뉴를 볼 수 있을까요?\"\n"
+     ]
+    }
+   ],
    "source": [
     "# 완성된 Chain을 실행하여 답변을 얻습니다.\n",
     "print(chain.invoke({\"question\": \"저는 식당에 가서 음식을 주문하고 싶어요\"}))"
@@ -378,9 +422,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 영어 회화:  \n",
+      "\"Hi, I’d like to order a table for one, please. Could I see the menu?\"  \n",
+      "\n",
+      "- 한글 해석:  \n",
+      "\"안녕하세요, 저 혼자 자리 예약하고 싶은데요. 메뉴를 볼 수 있을까요?\""
+     ]
+    }
+   ],
    "source": [
     "# 완성된 Chain을 실행하여 답변을 얻습니다.\n",
     "# 스트리밍 출력을 위한 요청\n",
@@ -391,9 +447,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 영어 회화:  \n",
+      "**Customer:** Hi, I’d like to order a large pepperoni pizza, please.  \n",
+      "**Staff:** Sure! Would you like any extra toppings or sides with that?  \n",
+      "**Customer:** Yes, can I also get some garlic bread and a two-liter soda?  \n",
+      "**Staff:** Absolutely. That will be $25.50. Would you like delivery or to pick it up?  \n",
+      "**Customer:** Delivery, please. How long will it take?  \n",
+      "**Staff:** It’ll be about 30 minutes. Can I have your address, please?  \n",
+      "**Customer:** Sure, it’s 123 Main Street, Apartment 4B.  \n",
+      "**Staff:** Got it. Thank you! Your order is on its way.  \n",
+      "\n",
+      "- 한글 해석:  \n",
+      "**손님:** 안녕하세요, 페퍼로니 피자 大 사이즈 주문하고 싶어요.  \n",
+      "**직원:** 네! 추가 토핑이나 사이드 메뉴도 원하시면 말씀해 주세요.  \n",
+      "**손님:** 네, 마늘 빵과 2리터 소다도 같이 주세요.  \n",
+      "**직원:** 알겠습니다. 총 금액은 25달러 50센트입니다. 배달로 하시겠어요, 아니면 픽업하시겠어요?  \n",
+      "**손님:** 배달 부탁드려요. 얼마나 걸리나요?  \n",
+      "**직원:** 약 30분 정도 걸릴 거예요. 주소를 알려주시겠어요?  \n",
+      "**손님:** 네, 123 메인 스트리트, 아파트 4B입니다.  \n",
+      "**직원:** 확인했어요. 감사합니다! 주문이 곧 배달될 예정입니다."
+     ]
+    }
+   ],
    "source": [
     "# 이번에는 question 을 '미국에서 피자 주문'으로 설정하여 실행합니다.\n",
     "# 스트리밍 출력을 위한 요청\n",
