--- a/01-Basic/04-LCEL-Advanced.ipynb
+++ b/01-Basic/04-LCEL-Advanced.ipynb
@@ -111,23 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b20202c9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PromptTemplate(input_variables=['topic'], input_types={}, partial_variables={}, template='{topic} 에 대하여 3문장으로 설명해줘.')\n",
-       "| ChatOpenAI(client=<openai.resources.chat.completions.completions.Completions object at 0x12c625cd0>, async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x12ce0aab0>, root_client=<openai.OpenAI object at 0x12c182ab0>, root_async_client=<openai.AsyncOpenAI object at 0x12ce0a6f0>, model_kwargs={}, openai_api_key=SecretStr('**********'))\n",
-       "| StrOutputParser()"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chain"
    ]
@@ -150,18 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f6304f90",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "멀티모달은 여러 가지의 다양한 형태를 가진 정보를 통합하여 제공하는 기술이다. 이는 텍스트, 이미지, 오디오, 비디오 등 다양한 매체를 활용하여 사용자에게 더욱 다양하고 풍부한 정보를 제공할 수 있게 한다. 멀티모달은 사용자 경험을 향상시키고 정보의 이해를 돕는 효과적인 수단으로 활용되고 있다."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# chain.stream 메서드를 사용하여 '멀티모달' 토픽에 대한 스트림을 생성하고 반복합니다.\n",
     "for token in chain.stream({\"topic\": \"멀티모달\"}):\n",
@@ -187,21 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6fb8bf06",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ChatGPT는 인공 지능 챗봇으로, 대화를 통해 사용자와 상호작용하여 다양한 주제에 대해 대화할 수 있습니다. 자연어 처리 기술을 사용하여 사용자의 질문에 대답하고 대화를 이어가며 학습합니다. ChatGPT는 감정 표현, 유머, 정보 제공 등 다양한 기능을 제공하여 다양한 상황에서 유용하게 활용될 수 있습니다.'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# chain 객체의 invoke 메서드를 호출하고, 'ChatGPT'라는 주제로 딕셔너리를 전달합니다.\n",
     "chain.invoke({\"topic\": \"ChatGPT\"})"
@@ -225,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "687d223d",
    "metadata": {},
    "outputs": [],
@@ -236,42 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "679f4b99",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ChatGPT는 인공지능 챗봇으로, 다양한 주제에 대해 대화를 나눌 수 있는 기술을 제공합니다. 사용자의 질문에 대답하고 의견을 제시하며, 자연스러운 대화를 위해 지속적으로 학습합니다. 또한 다목적적으로 활용할 수 있어, 커뮤니케이션부터 업무 처리까지 다양한 분야에서 유용하게 활용됩니다.'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "answer[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "4225801b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Instagram은 사진과 동영상을 공유하고 소셜 네트워킹 서비스를 제공하는 어플리케이션이다. 사용자들은 팔로워들과 소통하며 자신의 일상을 공유할 수 있다. 해시태그를 통해 관심사나 주제별로 다른 사람들과 소통할 수 있다.'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "answer[1]"
    ]
@@ -288,25 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2d5398d9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ChatGPT는 인공지능 채팅 모델로, 사용자와 자연스러운 대화를 나눌 수 있습니다. 이 모델은 다양한 주제에 대해 이해하고 적합한 답변을 생성할 수 있습니다. ChatGPT는 실용적이고 편리한 대화 시스템으로 다양한 분야에서 활용될 수 있습니다.',\n",
-       " '인스타그램은 사진 및 동영상을 공유하는 소셜 미디어 플랫폼으로, 전 세계적으로 인기 있는 SNS 앱이다. 다양한 필터와 편집 기능을 제공하여 사용자들이 자신만의 콘텐츠를 만들고 공유할 수 있도록 돕는다. 또한 해시태그를 통해 관심사나 주제별로 소통하고 커뮤니티를 형성하는데도 활용된다.',\n",
-       " '멀티모달은 여러 가지 다양한 형식의 정보나 자원을 통합하여 제공하는 시스템이다. 이는 사용자가 필요에 따라 다양한 방식으로 정보를 접근하고 활용할 수 있도록 도와준다. 영상, 음성, 텍스트 등 다양한 매체를 활용하여 사용자 경험을 향상시키는 것이 주요 목적이다.',\n",
-       " '프로그래밍은 컴퓨터에게 명령을 내리기 위해 작성하는 지침서입니다. 이를 통해 컴퓨터는 원하는 작업을 수행하고 원하는 결과를 출력합니다. 다양한 프로그래밍 언어들이 있으며, 각각의 언어는 특정한 목적이나 환경에 적합하게 설계되어 있습니다.',\n",
-       " '머신러닝은 컴퓨터 프로그램이 데이터를 학습하여 패턴을 파악하고 예측하는 기술이다. 이를 통해 인간이 일일이 규칙을 정의하지 않고도 데이터를 분석하고 의사결정을 내릴 수 있다. 머신러닝은 이미지 인식, 자연어 처리 등 다양한 분야에서 응용되고 있다.']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chain.batch(\n",
     "    [\n",
@@ -340,18 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3f8a9e91",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YouTube는 구글이 소유하고 운영하는 온라인 동영상 공유 플랫폼으로, 사용자들은 유튜브를 통해 다양한 주제의 동영상을 업로드하고 시청할 수 있습니다. 유튜브는 광고 수익과 구독자를 통해 크리에이터들에게 수익을 제공하며, 다양한 콘텐츠와 커뮤니티를 지원합니다. 최근에는 라이브 스트리밍 기능과 유료 구독 서비스를 도입하여 더 다양한 콘텐츠를 제공하고 있습니다."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 비동기 스트림을 사용하여 'YouTube' 토픽의 메시지를 처리합니다.\n",
     "async for token in chain.astream({\"topic\": \"YouTube\"}):\n",
@@ -377,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "2038557a",
    "metadata": {},
    "outputs": [],
@@ -388,21 +311,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ea8077cb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'NVDA는 미국의 컴퓨터 그래픽스 기술 회사인 엔비디아의 주식 코드이다. 엔비디아는 GPU(그래픽 처리 장치) 분야에서 세계적인 기술력으로 유명하며 NVDA 주식은 기술 성장주로 평가받고 있다. 주식 시장에서 NVDA는 기술 주식 중 하나로 주목받고 있으며 투자자들 사이에서 인기를 누리고 있다.'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 비동기로 처리되는 프로세스가 완료될 때까지 기다립니다.\n",
     "await my_process"
@@ -430,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "53a00116",
    "metadata": {},
    "outputs": [],
@@ -443,23 +355,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8823211b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['유튜브는 전 세계적으로 인기있는 동영상 공유 플랫폼으로, 온라인에서 다양한 콘텐츠를 시청할 수 있다. 사용자들은 자신이 관심 있는 주제에 맞는 동영상을 검색하고 업로드할 수 있으며, 구독자들과 소통할 수 있는 기능도 제공된다. 광고 수익과 스폰서쉽을 통해 수익을 창출할 수 있는 플랫폼이기도 하다.',\n",
-       " 'Instagram은 사진과 동영상을 공유하고 소셜 네트워킹 서비스를 제공하는 앱이다. 셀카부터 여행 사진, 음식 사진까지 다양한 컨텐츠를 감상할 수 있다. 댓글과 좋아요 등 인터랙티브한 기능을 통해 사용자들끼리 소통할 수 있다.',\n",
-       " 'Facebook은 세계적으로 가장 대중화된 소셜 네트워킹 서비스 중 하나이며 사람들끼리 소통하고 정보를 공유하는 데에 사용됩니다. 사용자는 프로필을 만들고 친구들과 연결되어 소식을 나눌 수 있으며, 사진, 동영상, 이벤트 등 다양한 콘텐츠를 공유할 수 있습니다. 또한 광고 플랫폼으로도 활용되어 기업들이 상품이나 서비스를 홍보하는 데에도 사용됩니다.']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 비동기로 처리되는 일괄 처리 프로세스가 완료될 때까지 기다립니다.\n",
     "await my_abatch_process"
@@ -490,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c2b42d05",
    "metadata": {},
    "outputs": [],
@@ -499,14 +398,14 @@
     "\n",
     "# {country} 의 수도를 물어보는 체인을 생성합니다.\n",
     "chain1 = (\n",
-    "    PromptTemplate.from_template(\"{country} 의 수도는 어디야?\")\n",
+    "    PromptTemplate.from_template(\"{country1} 의 수도는 어디야?\")\n",
     "    | model\n",
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
     "# {country} 의 면적을 물어보는 체인을 생성합니다.\n",
     "chain2 = (\n",
-    "    PromptTemplate.from_template(\"{country} 의 면적은 얼마야?\")\n",
+    "    PromptTemplate.from_template(\"{country2} 의 면적은 얼마야?\")\n",
     "    | model\n",
     "    | StrOutputParser()\n",
     ")\n",
@@ -527,10 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f04dbce0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'대한민국의 수도는 서울입니다.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain1 를 실행합니다.\n",
     "chain1.invoke({\"country\": \"대한민국\"})"
@@ -546,10 +456,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5b055566",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'미국의 면적은 약 9,833,520km² 입니다.'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain2 를 실행합니다.\n",
     "chain2.invoke({\"country\": \"미국\"})"
@@ -567,13 +488,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6fa82d78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'capital': '대한민국의 수도는 서울이다.', 'area': '미국의 면적은 9,833,520 km² 입니다.'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 병렬 실행 체인을 실행합니다.\n",
-    "combined.invoke({\"country\": \"대한민국\"})"
+    "combined.invoke({\"country1\": \"대한민국\", \"country2\": \"미국\"})"
    ]
   },
   {
